# innodb_operator

./: .gitignore  README.md  config.example.yaml  pyproject.toml  schema.sql  setup.py  用例书写规范.txt  需求文档.txt
scripts/: gen_missing_test_cases.py
src/innodb_suanzi/: __init__.py  __main__.py  runner.py
test_cases/: dstore_test_case_002.sql  dstore_test_case_003.sql
test_cases/alter_add_column/: dstore_test_case_001.sql  dstore_test_case_002.sql  dstore_test_case_003.sql  dstore_test_case_004.sql  dstore_test_case_005.sql  dstore_test_case_006.sql  dstore_test_case_007.sql  dstore_test_case_008.sql  dstore_test_case_009.sql  dstore_test_case_010.sql  dstore_test_case_011.sql  dstore_test_case_013.sql  dstore_test_case_014.sql  dstore_test_case_015.sql  dstore_test_case_016.sql  dstore_test_case_017.sql  dstore_test_case_018.sql  dstore_test_case_019.sql  dstore_test_case_020.sql  dstore_test_case_021.sql  dstore_test_case_022.sql  dstore_test_case_023.sql  dstore_test_case_024.sql  dstore_test_case_025.sql  dstore_test_case_026.sql  dstore_test_case_027.sql  dstore_test_case_028.sql
test_cases/alter_add_fulltext_index/: dstore_test_case_001.sql  dstore_test_case_002.sql  dstore_test_case_003.sql  dstore_test_case_004.sql  dstore_test_case_005.sql  dstore_test_case_006.sql  dstore_test_case_007.sql  dstore_test_case_008.sql  dstore_test_case_009.sql  dstore_test_case_010.sql  dstore_test_case_011.sql  dstore_test_case_012.sql  dstore_test_case_013.sql  dstore_test_case_014.sql  dstore_test_case_015.sql  dstore_test_case_016.sql  (+4 more)
tests/: conftest.py  test_runner.py
(+946 files in other folders)
