[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "innodb_suanzi"
version = "0.1.0"
description = "A starter project for InnoDB-related experiments and algorithms."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "yuyu" }
]
dependencies = [
  "PyMySQL>=1.1.1",
  "PyYAML>=6.0.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
